# E-Commerce-Django-Rest-Framework

./: .env.example  README.md  manage.py  pyproject.toml
api/: admin.py  apps.py  models.py  permissions.py  serializers.py  service.py  signals.py  task.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_user_role.py  0004_product_image.py  0005_merge_0004_product_image_0004_created_at_fields.py  0006_alter_order_total_bill.py
ecommerce/: celery.py  settings.py  urls.py  wsgi.py
ecommerce/settings/: dev.py  settings.py
