[project]
name = "e-commerce"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=26.3.1",
    "celery>=5.6.3",
    "django>=6.0.5",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "python-dotenv>=1.1.0",
    "redis>=7.4.0",
    "resend>=2.12.0",
]

[dependency-groups]
development = [
    "django-jazzmin>=3.0.4",
    "django-silk>=5.5.0",
    "django-unfold>=0.93.0",
]
production = [
    "gunicorn>=26.0.0",
]
